# OOP_FIRST_LABA

./: .gitignore  CMakeLists.txt  README.md
include/: growingTree.h
src/: growingTree.cpp  main.cpp
test/: test_growingTree.cpp  test_main.cpp
